--- a/lfront/src/app/app-bar/app-bar.component.html
+++ b/lfront/src/app/app-bar/app-bar.component.html
@@ -1,3 +1,6 @@
-<mat-toolbar color="primary">
-    <span>My Application</span>
+<mat-toolbar class="z-depth-2" color="primary">
+    <span>Third Line</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon">favorite</mat-icon>
+    <mat-icon class="example-icon">delete</mat-icon>
   </mat-toolbar>
