--- a/lfront/src/styles.scss
+++ b/lfront/src/styles.scss
@@ -1,5 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+// theming
+@import '~@angular/material/theming';
+
+@include mat-core();
+$my-blue: (
+  50: #233070,
+  100: #233071,
+  contrast: (
+        50 : #000000,
+        100 : #000000,
+  )
+);
+
+$my-orange: (
+  50: #FDA535,
+  100: #FDA535,
+  contrast: (
+        50 : #000000,
+        100 : #000000,
+  )
+);
+
+
+
+$primary: mat-palette($my-blue,50);
+//$primaty: #233070;
+$accent: mat-palette($my-orange,50);
+$theme: mat-light-theme($primary, $accent);
+
+@include angular-material-theme($theme);
+
 
 body {
     margin: 0;
