--- a/lfront/src/app/app-bar/app-bar.component.html
+++ b/lfront/src/app/app-bar/app-bar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar class="z-depth-2" color="primary">
-    <span>Third Line</span>
+    <img class="logo_img" src="assets/img/logo.png">    
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon">favorite</mat-icon>
-    <mat-icon class="example-icon">delete</mat-icon>
+    <button mat-raised-button color="accent">Войти</button>
   </mat-toolbar>
