--- a/lfront/src/app/app-bar/app-bar.component.html
+++ b/lfront/src/app/app-bar/app-bar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="z-depth-2" color="primary">
     <img class="logo_img" src="assets/img/logo.png">    
     <span class="example-spacer"></span>
-    <button mat-raised-button color="accent">Войти</button>
+    <button mat-raised-button color="accent" *ngIf="!auth.isAuthenticated()" (click)="auth.login()" >Войти</button>
+    <button mat-raised-button color="accent" *ngIf="auth.isAuthenticated()" (click)="auth.logout()" >Выйти</button>
   </mat-toolbar>
