--- a/lfront/src/app/component/whoami/whoami.component.html
+++ b/lfront/src/app/component/whoami/whoami.component.html
@@ -1,4 +1,7 @@
-<p>
-  whoami works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
 <p *ngIf="whoAmI"> I'm a user: {{whoAmI.name}} with id: {{whoAmI.userId}} </p>
+        </div>
+    </div>
+</div>
