--- a/lfront/src/app/app.component.html
+++ b/lfront/src/app/app.component.html
@@ -4,9 +4,11 @@
   <router-outlet></router-outlet>
   <!--The content below is only a placeholder and can be replaced.-->
 
+  <mat-card class="margin">
   <h1 class="mat-display-1">
     Bitzlato wallets statistics
   </h1>
 
   <wallet-stat></wallet-stat>
+</mat-card>
 </div>
