--- a/lfront/src/app/component/wallet-stat/wallet-stat.component.html
+++ b/lfront/src/app/component/wallet-stat/wallet-stat.component.html
@@ -1,83 +1,80 @@
 
-<div class = "example-container">
-  <table class="width" mat-table [dataSource]="walletStat" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
+    <div class = "example-container mat-elevation-z8" >
+        <table class="width" mat-table [dataSource]="walletStat" >
+      
+          <!--- Note that these columns can be defined in any order.
+                        The actual rendered columns are set as a property on the row definition" -->
+      
+          <!-- Column -->
+          <ng-container matColumnDef="code" sticky>
+            <th mat-header-cell *matHeaderCellDef> code </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="paymentsHour">
+            <th mat-header-cell *matHeaderCellDef> paymentsHour </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentsHour}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="minWithdrawal">
+            <th mat-header-cell *matHeaderCellDef> minWithdrawal </th>
+            <td mat-cell *matCellDef="let element"> {{element.minWithdrawal}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="withdrawEnabled">
+            <th mat-header-cell *matHeaderCellDef> withdrawEnabled </th>
+            <td mat-cell *matCellDef="let element"> {{element.withdrawEnabled}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="depositEnabled">
+            <th mat-header-cell *matHeaderCellDef> depositEnabled </th>
+            <td mat-cell *matCellDef="let element"> {{element.depositEnabled}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="fee">
+            <th mat-header-cell *matHeaderCellDef> fee </th>
+            <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
+          </ng-container>
+      
+      
+      
+          <!-- Column -->
+          <ng-container matColumnDef="paymentsQueue">
+            <th mat-header-cell *matHeaderCellDef> paymentsQueue </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentsQueue}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="paymentsError">
+            <th mat-header-cell *matHeaderCellDef> paymentsError </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentsError}} </td>
+          </ng-container>
+      
+          <!-- Column -->
+          <ng-container matColumnDef="inputHour">
+            <th mat-header-cell *matHeaderCellDef> inputHour </th>
+            <td mat-cell *matCellDef="let element"> {{element.inputHour}} </td>
+          </ng-container>
+      
+      
+          <!-- Column -->
+          <ng-container matColumnDef="unconfirmed">
+            <th mat-header-cell *matHeaderCellDef> unconfirmed </th>
+            <td mat-cell *matCellDef="let element"> {{element.unconfirmed}} </td>
+          </ng-container>
+      
+      
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
 
-    <!-- Column -->
-    <ng-container matColumnDef="code" sticky>
-      <th mat-header-cell *matHeaderCellDef> code </th>
-      <td mat-cell *matCellDef="let element"> {{element.code}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="paymentsHour">
-      <th mat-header-cell *matHeaderCellDef> paymentsHour </th>
-      <td mat-cell *matCellDef="let element"> {{element.paymentsHour}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="minWithdrawal">
-      <th mat-header-cell *matHeaderCellDef> minWithdrawal </th>
-      <td mat-cell *matCellDef="let element"> {{element.minWithdrawal}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="withdrawEnabled">
-      <th mat-header-cell *matHeaderCellDef> withdrawEnabled </th>
-      <td mat-cell *matCellDef="let element"> {{element.withdrawEnabled}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="depositEnabled">
-      <th mat-header-cell *matHeaderCellDef> depositEnabled </th>
-      <td mat-cell *matCellDef="let element"> {{element.depositEnabled}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="fee">
-      <th mat-header-cell *matHeaderCellDef> fee </th>
-      <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
-    </ng-container>
 
 
-
-    <!-- Column -->
-    <ng-container matColumnDef="paymentsQueue">
-      <th mat-header-cell *matHeaderCellDef> paymentsQueue </th>
-      <td mat-cell *matCellDef="let element"> {{element.paymentsQueue}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="paymentsError">
-      <th mat-header-cell *matHeaderCellDef> paymentsError </th>
-      <td mat-cell *matCellDef="let element"> {{element.paymentsError}} </td>
-    </ng-container>
-
-    <!-- Column -->
-    <ng-container matColumnDef="inputHour">
-      <th mat-header-cell *matHeaderCellDef> inputHour </th>
-      <td mat-cell *matCellDef="let element"> {{element.inputHour}} </td>
-    </ng-container>
-
-
-    <!-- Column -->
-    <ng-container matColumnDef="unconfirmed">
-      <th mat-header-cell *matHeaderCellDef> unconfirmed </th>
-      <td mat-cell *matCellDef="let element"> {{element.unconfirmed}} </td>
-    </ng-container>
-
-
-     <!-- Star Column -->
-     <ng-container matColumnDef="star" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon>more_vert</mat-icon>
-        </td>
-      </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
