--- a/lfront/src/app/component/wallet-stat/wallet-stat.component.scss
+++ b/lfront/src/app/component/wallet-stat/wallet-stat.component.scss
@@ -6,7 +6,7 @@
   }
   
   table {
-    width: 800px;
+    width: 100%;
   }
   
   td.mat-column-star {
@@ -19,10 +19,15 @@
   }
   
   .mat-table-sticky:first-child {
-    border-right: 1px solid #e0e0e0;
+    /* border-right: 1px solid #e0e0e0; */
+    padding-right: 3px;
   }
   
   .mat-table-sticky:last-child {
     border-left: 1px solid #e0e0e0;
+  } 
+  
+  .mat-header-cell {
+    padding: 2px;
   }
   
