--- a/lfront/src/app/app.component.html
+++ b/lfront/src/app/app.component.html
@@ -7,6 +7,7 @@
   <mat-card class="margin">
   <h1 class="mat-display-1">
     Bitzlato wallets statistics
+    <div>{{ 'HELLO' | translate:param }}</div>
   </h1>
 
   <wallet-stat></wallet-stat>
