--- a/lfront/src/app/app.component.html
+++ b/lfront/src/app/app.component.html
@@ -5,9 +5,8 @@
   <!--The content below is only a placeholder and can be replaced.-->
 
   <mat-card class="margin">
-  <h1 class="mat-display-1">
-    Bitzlato wallets statistics
-    <div>{{ 'HELLO' | translate:param }}</div>
+  <h1 class="mat-display-1">   
+    <div>{{ 'MAIN_PAGE.HEADER' | translate }}</div>
   </h1>
 
   <wallet-stat></wallet-stat>
