--- a/lfront/src/app/component/wallet-stat/wallet-stat.component.html
+++ b/lfront/src/app/component/wallet-stat/wallet-stat.component.html
@@ -8,37 +8,37 @@
       
           <!-- Column -->
           <ng-container matColumnDef="code" sticky>
-            <th mat-header-cell *matHeaderCellDef> code </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.code' | translate}}   </th>
             <td mat-cell *matCellDef="let element"> {{element.code}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="paymentsHour">
-            <th mat-header-cell *matHeaderCellDef> paymentsHour </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsHour' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.paymentsHour}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="minWithdrawal">
-            <th mat-header-cell *matHeaderCellDef> minWithdrawal </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.minWithdrawal' | translate}}  </th>
             <td mat-cell *matCellDef="let element"> {{element.minWithdrawal}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="withdrawEnabled">
-            <th mat-header-cell *matHeaderCellDef> withdrawEnabled </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.withdrawEnabled' | translate }} </th>
             <td mat-cell *matCellDef="let element"> {{element.withdrawEnabled}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="depositEnabled">
-            <th mat-header-cell *matHeaderCellDef> depositEnabled </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.depositEnabled' | translate}}  </th>
             <td mat-cell *matCellDef="let element"> {{element.depositEnabled}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="fee">
-            <th mat-header-cell *matHeaderCellDef> fee </th>
+            <th mat-header-cell *matHeaderCellDef>  {{ 'MAIN_PAGE.STAT_TABLE.fee' | translate }} </th>
             <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
           </ng-container>
       
@@ -46,26 +46,26 @@
       
           <!-- Column -->
           <ng-container matColumnDef="paymentsQueue">
-            <th mat-header-cell *matHeaderCellDef> paymentsQueue </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsQueue' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.paymentsQueue}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="paymentsError">
-            <th mat-header-cell *matHeaderCellDef> paymentsError </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsError' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.paymentsError}} </td>
           </ng-container>
       
           <!-- Column -->
           <ng-container matColumnDef="inputHour">
-            <th mat-header-cell *matHeaderCellDef> inputHour </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.inputHour' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.inputHour}} </td>
           </ng-container>
       
       
           <!-- Column -->
           <ng-container matColumnDef="unconfirmed">
-            <th mat-header-cell *matHeaderCellDef> unconfirmed </th>
+            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.unconfirmed' | translate}} </th>
             <td mat-cell *matCellDef="let element"> {{element.unconfirmed}} </td>
           </ng-container>
       
