--- a/lfront/src/app/component/wallet-stat/wallet-stat.component.html
+++ b/lfront/src/app/component/wallet-stat/wallet-stat.component.html
@@ -1,80 +1,101 @@
+<div class="example-container mat-elevation-z8">
+  <table class="width" mat-table [dataSource]="walletStat">
 
-
-    <div class = "example-container mat-elevation-z8" >
-        <table class="width" mat-table [dataSource]="walletStat" >
-      
-          <!--- Note that these columns can be defined in any order.
+    <!--- Note that these columns can be defined in any order.
                         The actual rendered columns are set as a property on the row definition" -->
-      
-          <!-- Column -->
-          <ng-container matColumnDef="code" sticky>
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.code' | translate}}   </th>
-            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="paymentsHour">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsHour' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.paymentsHour}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="minWithdrawal">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.minWithdrawal' | translate}}  </th>
-            <td mat-cell *matCellDef="let element"> {{element.minWithdrawal}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="withdrawEnabled">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.withdrawEnabled' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.withdrawEnabled}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="depositEnabled">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.depositEnabled' | translate}}  </th>
-            <td mat-cell *matCellDef="let element"> {{element.depositEnabled}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="fee">
-            <th mat-header-cell *matHeaderCellDef>  {{ 'MAIN_PAGE.STAT_TABLE.fee' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
-          </ng-container>
-      
-      
-      
-          <!-- Column -->
-          <ng-container matColumnDef="paymentsQueue">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsQueue' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.paymentsQueue}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="paymentsError">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.paymentsError' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.paymentsError}} </td>
-          </ng-container>
-      
-          <!-- Column -->
-          <ng-container matColumnDef="inputHour">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.inputHour' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.inputHour}} </td>
-          </ng-container>
-      
-      
-          <!-- Column -->
-          <ng-container matColumnDef="unconfirmed">
-            <th mat-header-cell *matHeaderCellDef> {{ 'MAIN_PAGE.STAT_TABLE.unconfirmed' | translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.unconfirmed}} </td>
-          </ng-container>
-      
-      
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </div>
+
+    <!-- Column -->
+    <ng-container matColumnDef="code" sticky>
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.code' | translate}}  "
+        matTooltipPosition="above">
+        {{ 'MAIN_PAGE.STAT_TABLE.code' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="paymentsHour">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.paymentsHour' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.paymentsHour' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.paymentsHour}} </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="minWithdrawal">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.minWithdrawal' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.minWithdrawal' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.minWithdrawal}} </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="withdrawEnabled">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.withdrawEnabled' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.withdrawEnabled' | translate }} </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.withdrawEnabled === true">
+          {{ 'LABELS.YES' | translate}}
+        </span>
+        <span *ngIf="element.withdrawEnabled ===false">
+          {{ 'LABELS.NO' | translate}}
+        </span>
+      </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="depositEnabled">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.depositEnabled' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.depositEnabled' | translate}} </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.depositEnabled === true">
+          {{ 'LABELS.YES' | translate}}
+        </span>
+        <span *ngIf="element.depositEnabled ===false">
+          {{ 'LABELS.NO' | translate}}
+        </span>
+
+      </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="fee">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.fee' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.fee' | translate }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
+    </ng-container>
 
 
 
+    <!-- Column -->
+    <ng-container matColumnDef="paymentsQueue">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.paymentsQueue' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.paymentsQueue' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.paymentsQueue}} </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="paymentsError">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.paymentsError' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.paymentsError' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.paymentsError}} </td>
+    </ng-container>
+
+    <!-- Column -->
+    <ng-container matColumnDef="inputHour">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.inputHour' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.inputHour' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.inputHour}} </td>
+    </ng-container>
+
+
+    <!-- Column -->
+    <ng-container matColumnDef="unconfirmed">
+      <th mat-header-cell *matHeaderCellDef matTooltip="{{ 'MAIN_PAGE.STAT_TABLE.TOOLTIP.unconfirmed' | translate}}  "
+        matTooltipPosition="above"> {{ 'MAIN_PAGE.STAT_TABLE.unconfirmed' | translate}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.unconfirmed}} </td>
+    </ng-container>
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
